--- a/notebooks/01_project_setup.ipynb
+++ b/notebooks/01_project_setup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "80edcbda-bcca-4d29-b2ee-3549aa82a060",
    "metadata": {},
    "outputs": [],
@@ -25,10 +25,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "fcc27a1d-709f-42b0-ae75-f14a3cf31659",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# \"magic commands\" to enable autoreload of your imported packages\n",
     "%load_ext autoreload\n",
@@ -60,17 +69,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "403d23b7-282f-4bbb-833d-a52756208f17",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/home/antonio/code/antoniovmonge/olist/notebooks'"
+       "'/home/antonio/code/antoniovmonge/olist-dash/notebooks'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "ddc97147-cf0c-422c-b6e6-08bc2e26401a",
    "metadata": {},
    "outputs": [
@@ -93,7 +102,7 @@
        "'../raw_data/csv'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "2da40954-9998-4172-b81e-151e94b17320",
    "metadata": {},
    "outputs": [
@@ -192,7 +201,7 @@
        "4  braganca paulista           SP  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "0982a427-b512-4898-8f53-9c9dcf0bd4a7",
    "metadata": {},
    "outputs": [
@@ -231,7 +240,7 @@
        " 'olist_geolocation_dataset.csv']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "e9ca1fee-d684-44da-a1fe-89670924fc35",
    "metadata": {},
    "outputs": [
@@ -273,7 +282,7 @@
        " 'geolocation']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "6ae1fa1f-6e14-4310-89be-d023b8c2762d",
    "metadata": {},
    "outputs": [
@@ -316,7 +325,7 @@
        "dict_keys(['sellers', 'order_reviews', 'order_items', 'customers', 'orders', 'order_payments', 'product_category_name_translation', 'products', 'geolocation'])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,14 +347,14 @@
     "It should return the dictionary `data` upon calling it as per below\n",
     "\n",
     "```python\n",
-    "from olist.data import Olist\n",
+    "from olistdash.data import Olist\n",
     "Olist().get_data()\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "85016bf1-c29c-485f-addb-5ead9f8f58c0",
    "metadata": {},
    "outputs": [],
@@ -364,12 +373,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "b674e2a2-3d3a-443c-83f7-50db7009c562",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from olist.data import Olist\n",
+    "from olistdash.data import Olist\n",
     "data = Olist().get_data()"
    ]
   },
@@ -383,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "607ab7ca",
    "metadata": {},
    "outputs": [],
@@ -394,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "d6e2e2c3",
    "metadata": {},
    "outputs": [],
@@ -416,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "6ffa7cab-595b-4e3a-aa3d-b170c131e9a9",
    "metadata": {},
    "outputs": [],
@@ -440,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "id": "1a2afcef-8c29-4f78-8e3c-10d856a53be8",
    "metadata": {},
    "outputs": [],
@@ -460,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "id": "ec618384-0ce5-4819-8373-7f9961679a7d",
    "metadata": {},
    "outputs": [
@@ -491,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "id": "1c9e2daa-2851-4f64-8731-724d07ee4ba3",
    "metadata": {},
    "outputs": [
@@ -660,7 +669,7 @@
        "[114100 rows x 5 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "id": "a17612d9-f467-426a-881e-3d3b219f2073",
    "metadata": {},
    "outputs": [
@@ -723,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "id": "7add317c-ced6-4e47-b233-c35f16e805c4",
    "metadata": {},
    "outputs": [
@@ -892,13 +901,13 @@
        "[114100 rows x 5 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from olist.data import Olist\n",
+    "from olistdash.data import Olist\n",
     "data = Olist().get_matching_table()\n",
     "data"
    ]
@@ -921,12 +930,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "id": "c1784386-5183-4a1a-a58c-8cb38fdabf70",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from olist.data import Olist\n",
+    "from olistdash.data import Olist\n",
     "data = Olist().get_data()"
    ]
   },
@@ -940,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "id": "a8c06941-c5ee-4532-87e7-14ff1b5e29a0",
    "metadata": {},
    "outputs": [
@@ -950,7 +959,7 @@
        "<AxesSubplot:xlabel='review_score', ylabel='count'>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -973,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "id": "509013a3-89fd-44d9-802d-e0c1986a56b4",
    "metadata": {},
    "outputs": [
@@ -1000,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "id": "b2457b6a-2cf2-4843-b6c5-4a8bbb594e7d",
    "metadata": {},
    "outputs": [
@@ -1010,7 +1019,7 @@
        "<AxesSubplot:xlabel='order_status', ylabel='count'>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1033,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "id": "e95a1237-2392-44f2-b7fc-c0c448750b7e",
    "metadata": {},
    "outputs": [
@@ -1043,7 +1052,7 @@
        "99441"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1054,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "id": "42435fad-3019-49fe-a9e3-7da0d6066980",
    "metadata": {},
    "outputs": [
@@ -1072,7 +1081,7 @@
        "Name: order_status, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1091,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "id": "c2967235-5668-4382-9aa6-008afce42244",
    "metadata": {},
    "outputs": [
@@ -1101,7 +1110,7 @@
        "0"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1113,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "id": "6df8bf12-80b6-4f52-a776-27fac8ad4afd",
    "metadata": {},
    "outputs": [
@@ -1132,7 +1141,7 @@
        "Name: review_score, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1188,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "id": "db6823db-aff4-4f95-a6fb-1c304bdaa71e",
    "metadata": {},
    "outputs": [],
@@ -1199,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "id": "e0bd176b-c003-4bb4-a03b-31506c81d5c4",
    "metadata": {},
    "outputs": [],
@@ -1211,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "id": "2cb1efb7-634a-43c6-bae0-f17246f4cb4d",
    "metadata": {},
    "outputs": [
@@ -1445,7 +1454,7 @@
        "[99441 rows x 7 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1464,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "id": "071c989b-4a74-4540-b31f-d695469560df",
    "metadata": {},
    "outputs": [
@@ -1474,7 +1483,7 @@
        "Text(0.5, 1.0, 'weekly orders (total)')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1498,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "id": "b6b3844c-c791-4fef-82c8-8467fffbb631",
    "metadata": {},
    "outputs": [
@@ -1508,7 +1517,7 @@
        "Text(0.5, 1.0, 'weekly non-delivered orders')"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1541,7 +1550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "id": "c5de920b-1d5a-44a8-86ce-f0f0cea97206",
    "metadata": {},
    "outputs": [
@@ -1634,7 +1643,7 @@
        "4                     2         128.45  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1645,7 +1654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 43,
    "id": "b46a35cd-90b4-4e69-aebb-5bd0e3b1ad2b",
    "metadata": {},
    "outputs": [
@@ -1712,7 +1721,7 @@
        "00042b26cf59d7ce69dfabb4e55b4fd9               218.04"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1733,7 +1742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "id": "d778428d-e241-4076-b779-5296341653c4",
    "metadata": {},
    "outputs": [],
@@ -1743,7 +1752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 45,
    "id": "73af6145-2471-42d9-ad37-ea6e884ab88e",
    "metadata": {},
    "outputs": [
@@ -1874,7 +1883,7 @@
        "4                    2018-02-26                28.62  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1889,7 +1898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 46,
    "id": "4d3b785e-afa7-4ad4-aa72-1f63ec8611fa",
    "metadata": {},
    "outputs": [
@@ -1899,7 +1908,7 @@
        "Text(0.5, 1.0, 'Weekly orders values')"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1937,7 +1946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 47,
    "id": "b573582c-03fb-4502-81c9-e0d2ff8bdb89",
    "metadata": {},
    "outputs": [],
@@ -1947,7 +1956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 48,
    "id": "6b185d6c-2c9b-4ad1-aecc-9301026f0c17",
    "metadata": {},
    "outputs": [
@@ -2066,7 +2075,7 @@
        "4     2018-03-02 10:26:53  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2077,7 +2086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 49,
    "id": "5c4e27ad-d67c-4f16-91c5-19d3a8bc9954",
    "metadata": {},
    "outputs": [],
@@ -2089,7 +2098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 50,
    "id": "9cd5c6ef-beee-40ec-93cf-671bbfb22885",
    "metadata": {},
    "outputs": [
@@ -2099,7 +2108,7 @@
        "<AxesSubplot:xlabel='review_creation_date'>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2130,7 +2139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 51,
    "id": "952730cb-a7df-48d1-9b8e-79e0fb656319",
    "metadata": {},
    "outputs": [],
@@ -2144,7 +2153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 52,
    "id": "c9436610-0cb8-4bf9-a43d-22da48628a5d",
    "metadata": {},
    "outputs": [],
@@ -2154,7 +2163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 53,
    "id": "044b3fff-db54-4d1b-8acb-33121f435972",
    "metadata": {},
    "outputs": [],
@@ -2164,7 +2173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "id": "03a4da0f-a2f0-4a2f-a9db-99bd84872955",
    "metadata": {},
    "outputs": [
@@ -2196,7 +2205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 55,
    "id": "915b087c-cc2f-4cfa-b7f4-1999d7176dad",
    "metadata": {},
    "outputs": [
@@ -2206,7 +2215,7 @@
        "Text(0.5, 1.0, 'wait_time in days')"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2232,7 +2241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 56,
    "id": "759724d6-9475-4ca8-b403-48b9d8fa3a22",
    "metadata": {},
    "outputs": [
@@ -2250,7 +2259,7 @@
        "Name: wait_time, dtype: float64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2261,7 +2270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 57,
    "id": "4f5caf4d-f8ee-45a0-ba47-d79026b109ad",
    "metadata": {},
    "outputs": [
@@ -2279,7 +2288,7 @@
        "Name: delay_vs_expected, dtype: float64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
