--- a/notebooks/02_statistical_inference.ipynb
+++ b/notebooks/02_statistical_inference.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "58604f72-dde2-4540-89e9-0843779bf38c",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "6dcf73c0-dcbd-412c-8fbc-9b32b4066860",
    "metadata": {},
    "outputs": [
@@ -155,7 +155,7 @@
        "0           2017-10-18 00:00:00  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "46cad13d-7bb4-4c83-8e69-d8ff0e16ef06",
    "metadata": {},
    "outputs": [],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "18c21d80-78f8-4e9a-a2cd-7e9c7a7da5c7",
    "metadata": {},
    "outputs": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "1b5fb16c-7ffc-4e94-bd56-fa4b57cdeb10",
    "metadata": {},
    "outputs": [],
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "ee081428-d2b5-4cd4-a33b-87d71b69e1a9",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "3fb72115-e966-4a7c-adee-fb5f72ec7551",
    "metadata": {},
    "outputs": [],
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "72fdf61a-d121-466b-a3e7-be2de6cb79b5",
    "metadata": {},
    "outputs": [
@@ -322,7 +322,7 @@
        "5.355729166666666"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "id": "b3a2f4f1-4dea-4dc6-ab32-a95f54e323b2",
    "metadata": {},
    "outputs": [
@@ -360,7 +360,7 @@
        "Name: delay_vs_expected, dtype: float64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "id": "8d86a1a5-483d-4a89-859c-f309a7a4811d",
    "metadata": {},
    "outputs": [],
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "id": "653b8d98-e129-4fc7-9ccc-a9872dad6484",
    "metadata": {},
    "outputs": [
@@ -422,7 +422,7 @@
        "Name: delay_vs_expected, dtype: float64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "id": "7f440a0f-9701-4e45-892d-79ea0ae4dd9c",
    "metadata": {},
    "outputs": [
@@ -509,7 +509,7 @@
        "0                    2017-10-18                0.0  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "id": "11d0d50e-fb7d-4f8c-af09-dd180e5b1a04",
    "metadata": {},
    "outputs": [],
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "id": "4de46b57-2058-4223-bb93-df6d736a8b77",
    "metadata": {},
    "outputs": [
@@ -541,7 +541,7 @@
        "13.782037037037037"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 17,
    "id": "4337733f-333f-401b-9736-d9aba192886b",
    "metadata": {},
    "outputs": [],
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 18,
    "id": "7ca1994e-9ac5-4318-ba68-ddf4cb8a8f45",
    "metadata": {},
    "outputs": [
@@ -583,7 +583,7 @@
        "19.137766203703702"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,12 +598,12 @@
    "id": "f99530f4-fe8b-4b5e-b762-0f16cdf4f307",
    "metadata": {},
    "source": [
-    "## DATA FRAME WITH NEW COLUMNS"
+    "#### DATA FRAME WITH NEW COLUMNS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 19,
    "id": "2be46b21-cfb5-42f9-847c-1ddba9e01baa",
    "metadata": {},
    "outputs": [
@@ -666,7 +666,7 @@
        "1                0.0    delivered  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,9 +676,398 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3299e4a7-2aad-4f85-8f56-bc3e0a8b71e5",
+   "metadata": {},
+   "source": [
+    "## 2. def get_review_score():\n",
+    "Returns a DataFrame with:\n",
+    "    `'order_id'`, `'dim_is_five_star'`, `'dim_is_one_star'`, `'review_score'`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "0bf7a89b-3c3a-4912-b792-b93fa3a95a63",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>review_id</th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>review_score</th>\n",
+       "      <th>review_comment_title</th>\n",
+       "      <th>review_comment_message</th>\n",
+       "      <th>review_creation_date</th>\n",
+       "      <th>review_answer_timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7bc2406110b926393aa56f80a40eba40</td>\n",
+       "      <td>73fc7af87114b39712e6da79b0a377eb</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018-01-18 00:00:00</td>\n",
+       "      <td>2018-01-18 21:46:59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>80e641a11e56f04c1ad469d5645fdfde</td>\n",
+       "      <td>a548910a1c6147796b98fdf73dbeba33</td>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018-03-10 00:00:00</td>\n",
+       "      <td>2018-03-11 03:05:13</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          review_id                          order_id  \\\n",
+       "0  7bc2406110b926393aa56f80a40eba40  73fc7af87114b39712e6da79b0a377eb   \n",
+       "1  80e641a11e56f04c1ad469d5645fdfde  a548910a1c6147796b98fdf73dbeba33   \n",
+       "\n",
+       "   review_score review_comment_title review_comment_message  \\\n",
+       "0             4                  NaN                    NaN   \n",
+       "1             5                  NaN                    NaN   \n",
+       "\n",
+       "  review_creation_date review_answer_timestamp  \n",
+       "0  2018-01-18 00:00:00     2018-01-18 21:46:59  \n",
+       "1  2018-03-10 00:00:00     2018-03-11 03:05:13  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reviews = data['order_reviews'].copy()\n",
+    "reviews.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "2b624ca8-cc2a-472c-b1f9-8f6671969bca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Implementing functions for the new columns 'dim_is_five_star' and 'dim_is_one_star'\n",
+    "def dim_five_star(d):\n",
+    "    if d == 5:\n",
+    "        return 1\n",
+    "    return 0\n",
+    "\n",
+    "def dim_one_star(d):\n",
+    "    if d == 1:\n",
+    "        return 1\n",
+    "    return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "162e3d23-8ecc-44ab-bec8-cf8f82e0cad0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reviews[\"dim_is_five_star\"] = reviews[\"review_score\"].map(dim_five_star)\n",
+    "reviews[\"dim_is_one_star\"] = reviews[\"review_score\"].map(dim_one_star)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "6d11b3b0-0cd2-467c-b9f7-b07dc105c5f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>dim_is_five_star</th>\n",
+       "      <th>dim_is_one_star</th>\n",
+       "      <th>review_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>73fc7af87114b39712e6da79b0a377eb</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>a548910a1c6147796b98fdf73dbeba33</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>f9e4b658b201a9f2ecdecbb34bed034b</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>658677c97b385a9be170737859d3511b</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8e6bfb81e283fa7e4f11123a3fb894f1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           order_id  dim_is_five_star  dim_is_one_star  \\\n",
+       "0  73fc7af87114b39712e6da79b0a377eb                 0                0   \n",
+       "1  a548910a1c6147796b98fdf73dbeba33                 1                0   \n",
+       "2  f9e4b658b201a9f2ecdecbb34bed034b                 1                0   \n",
+       "3  658677c97b385a9be170737859d3511b                 1                0   \n",
+       "4  8e6bfb81e283fa7e4f11123a3fb894f1                 1                0   \n",
+       "\n",
+       "   review_score  \n",
+       "0             4  \n",
+       "1             5  \n",
+       "2             5  \n",
+       "3             5  \n",
+       "4             5  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# TEST\n",
+    "reviews[[\"order_id\", \"dim_is_five_star\", \"dim_is_one_star\", \"review_score\"]].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d24d20a-2390-472b-9197-6daf89b9555d",
+   "metadata": {},
+   "source": [
+    "# ⚠ Implement code in order.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "7b3324b0-7ac0-4f9c-9f53-7932bda252f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>dim_is_five_star</th>\n",
+       "      <th>dim_is_one_star</th>\n",
+       "      <th>review_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>73fc7af87114b39712e6da79b0a377eb</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>a548910a1c6147796b98fdf73dbeba33</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>f9e4b658b201a9f2ecdecbb34bed034b</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>658677c97b385a9be170737859d3511b</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8e6bfb81e283fa7e4f11123a3fb894f1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99995</th>\n",
+       "      <td>22ec9f0669f784db00fa86d035cf8602</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99996</th>\n",
+       "      <td>55d4004744368f5571d1f590031933e4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99997</th>\n",
+       "      <td>7725825d039fc1f0ceb7635e3f7d9206</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99998</th>\n",
+       "      <td>f8bd3f2000c28c5342fedeb5e50f2e75</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99999</th>\n",
+       "      <td>90531360ecb1eec2a1fbb265a0db0508</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100000 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               order_id  dim_is_five_star  dim_is_one_star  \\\n",
+       "0      73fc7af87114b39712e6da79b0a377eb                 0                0   \n",
+       "1      a548910a1c6147796b98fdf73dbeba33                 1                0   \n",
+       "2      f9e4b658b201a9f2ecdecbb34bed034b                 1                0   \n",
+       "3      658677c97b385a9be170737859d3511b                 1                0   \n",
+       "4      8e6bfb81e283fa7e4f11123a3fb894f1                 1                0   \n",
+       "...                                 ...               ...              ...   \n",
+       "99995  22ec9f0669f784db00fa86d035cf8602                 1                0   \n",
+       "99996  55d4004744368f5571d1f590031933e4                 1                0   \n",
+       "99997  7725825d039fc1f0ceb7635e3f7d9206                 0                0   \n",
+       "99998  f8bd3f2000c28c5342fedeb5e50f2e75                 0                1   \n",
+       "99999  90531360ecb1eec2a1fbb265a0db0508                 0                1   \n",
+       "\n",
+       "       review_score  \n",
+       "0                 4  \n",
+       "1                 5  \n",
+       "2                 5  \n",
+       "3                 5  \n",
+       "4                 5  \n",
+       "...             ...  \n",
+       "99995             5  \n",
+       "99996             5  \n",
+       "99997             4  \n",
+       "99998             1  \n",
+       "99999             1  \n",
+       "\n",
+       "[100000 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Testing code once implemented to olistdash/order.py\n",
+    "from olistdash.order import Order\n",
+    "Order().get_review_score()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2ce4e6d-1ee4-497c-964b-85386af7204b",
+   "id": "d2ecb847-5d02-4ee8-b992-57089e149948",
    "metadata": {},
    "outputs": [],
    "source": []
