--- a/notebooks/12_seller_pnl.ipynb
+++ b/notebooks/12_seller_pnl.ipynb
@@ -18,7 +18,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# SELLER P&L ANALYSIS"
+    "# SELLER P&L ANALYSIS  (Profits and Loss)"
    ],
    "metadata": {}
   },
