--- a/notebooks/02_statistical_inference.ipynb
+++ b/notebooks/02_statistical_inference.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "3cef1e95",
    "metadata": {},
    "source": [
     "# Orders"
@@ -9,6 +10,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "08a18ce3",
    "metadata": {},
    "source": [
     "#### Investigating the orders, and their associated review score."
@@ -16,6 +18,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "16a557e6",
    "metadata": {},
    "source": [
     "we will create one single data table containing **all our orders with some engineered statistics for them as additional columns.**\n",
@@ -39,6 +42,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b5790153",
    "metadata": {},
    "source": [
     "DB Schema: https://kitt.lewagon.com/db/23825"
@@ -47,6 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
+   "id": "67c0ba7d",
    "metadata": {},
    "outputs": [
     {
@@ -67,6 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "cc369c0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,6 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "dc5cf582",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,6 +99,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "56575215",
    "metadata": {},
    "source": [
     "## Code `order.py`"
@@ -100,6 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "9cf15045",
    "metadata": {},
    "outputs": [
     {
@@ -175,6 +184,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d1ac6dc3",
    "metadata": {},
    "source": [
     "#### Filter delivered orders"
@@ -183,6 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "ed2b373c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,6 +202,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "44260879",
    "metadata": {},
    "source": [
     "## 1. def get_wait_time():\n",
@@ -199,6 +211,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2b3d5d1d",
    "metadata": {},
    "source": [
     "#### ⁉ ... Checking type of objects in \"time columns\""
@@ -207,6 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "a3d41ace",
    "metadata": {},
    "outputs": [
     {
@@ -227,6 +241,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "850a4a65",
    "metadata": {},
    "source": [
     "#### ❕❗ As they are 'str' it is needed to convert them to pandas.datetime"
@@ -234,6 +249,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e74b6ae7",
    "metadata": {},
    "source": [
     "#### handling datetime"
@@ -242,6 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "dbb74b08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,6 +272,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d2229a33",
    "metadata": {},
    "source": [
     "#### ⁉ ... Checking again type of objects in \"time columns\""
@@ -263,6 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "b7ed6714",
    "metadata": {},
    "outputs": [
     {
@@ -283,6 +302,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d6d9d60d",
    "metadata": {},
    "source": [
     "#### 👌🆗 Now it is possible to procced"
@@ -290,6 +310,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "064c82fc",
    "metadata": {},
    "source": [
     "### 1.1 Computing [\"delay_vs_expected\"]"
@@ -298,6 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "44f75851",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,6 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "c73d4a38",
    "metadata": {},
    "outputs": [
     {
@@ -328,6 +351,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "69d88b8d",
    "metadata": {},
    "source": [
     "##### Analize new column:"
@@ -336,6 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "96de9e22",
    "metadata": {},
    "outputs": [
     {
@@ -363,6 +388,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ebe93ec7",
    "metadata": {},
    "source": [
     "#### handling negative delays for ['delay_vs_expected'] column"
@@ -371,6 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "04fadd17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,6 +413,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "95f1cd05",
    "metadata": {},
    "source": [
     "Testing result of applying handle_delay function:"
@@ -394,6 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "b0479147",
    "metadata": {},
    "outputs": [
     {
@@ -421,6 +450,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "07354994",
    "metadata": {},
    "source": [
     "### 1.2 Computing `['wait_time']` column\n",
@@ -430,6 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "9adfecca",
    "metadata": {},
    "outputs": [
     {
@@ -507,6 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "be0949ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,6 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "7ace44cf",
    "metadata": {},
    "outputs": [
     {
@@ -537,6 +570,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "203f622d",
    "metadata": {},
    "source": [
     "### Computing `['expected_wait_time']` column\n",
@@ -546,6 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "2176b2a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,6 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "9db4b41a",
    "metadata": {},
    "outputs": [
     {
@@ -576,6 +612,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "54a28d66",
    "metadata": {},
    "source": [
     "#### DATA FRAME WITH NEW COLUMNS"
@@ -584,6 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "9ddd0d71",
    "metadata": {},
    "outputs": [
     {
@@ -656,6 +694,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a537f4b8",
    "metadata": {},
    "source": [
     "## 2. def get_review_score():\n",
@@ -666,6 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "b0db1099",
    "metadata": {},
    "outputs": [
     {
@@ -750,6 +790,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "82e3bda1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,6 +809,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "c4f89d43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,6 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
+   "id": "d0df2f5b",
    "metadata": {},
    "outputs": [
     {
@@ -875,6 +918,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c37a4608",
    "metadata": {},
    "source": [
     "# ⚠ Implement code in order.py"
@@ -883,6 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "ff6fea24",
    "metadata": {},
    "outputs": [
     {
@@ -1038,6 +1083,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0e14b323",
    "metadata": {},
    "source": [
     "### 3. def get_number_products():\n",
@@ -1046,6 +1092,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ad1f3ed1",
    "metadata": {},
    "source": [
     "Table: data['order_items']"
@@ -1054,6 +1101,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "8467b9c2",
    "metadata": {},
    "outputs": [
     {
@@ -1137,6 +1185,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b9f156a3",
    "metadata": {},
    "source": [
     "#### Implement in order.py"
@@ -1145,6 +1194,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
+   "id": "691cfd4b",
    "metadata": {},
    "outputs": [
     {
@@ -1262,6 +1312,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ee4cb876",
    "metadata": {},
    "source": [
     "### 4. def get_number_sellers():\n",
@@ -1272,6 +1323,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
+   "id": "14a79bfa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1286,6 +1338,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
+   "id": "dfe17aaa",
    "metadata": {},
    "outputs": [
     {
@@ -1402,6 +1455,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5d34bfa4",
    "metadata": {},
    "source": [
     "#### Implement in order.py"
@@ -1410,6 +1464,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
+   "id": "739a1a48",
    "metadata": {},
    "outputs": [
     {
@@ -1527,6 +1582,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "577b0fea",
    "metadata": {},
    "source": [
     "### get_price_and_freight\n",
@@ -1537,6 +1593,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
+   "id": "89a6857c",
    "metadata": {},
    "outputs": [
     {
@@ -1559,6 +1616,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
+   "id": "f07b0868",
    "metadata": {},
    "outputs": [
     {
@@ -1690,6 +1748,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fb51d1dc",
    "metadata": {},
    "source": [
     "#### Implement in order.py"
@@ -1698,6 +1757,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
+   "id": "676152e5",
    "metadata": {},
    "outputs": [
     {
@@ -1827,6 +1887,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7bf0f253",
    "metadata": {},
    "source": [
     "### get_distance_seller_customer\n",
@@ -1837,6 +1898,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
+   "id": "27c84736",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1847,6 +1909,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
+   "id": "00783c51",
    "metadata": {},
    "outputs": [
     {
@@ -1950,6 +2013,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
+   "id": "9212f6a3",
    "metadata": {},
    "outputs": [
     {
@@ -2119,6 +2183,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
+   "id": "7be9bdff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2130,6 +2195,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
+   "id": "5e736aff",
    "metadata": {},
    "outputs": [
     {
@@ -2213,6 +2279,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
+   "id": "fa7a5cba",
    "metadata": {},
    "outputs": [
     {
@@ -2296,6 +2363,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
+   "id": "2eef44bc",
    "metadata": {},
    "outputs": [
     {
@@ -2377,6 +2445,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
+   "id": "071f4bf0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2386,6 +2455,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
+   "id": "8286d1b1",
    "metadata": {},
    "outputs": [
     {
@@ -2408,6 +2478,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
+   "id": "4374af5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2425,6 +2496,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
+   "id": "e31634b5",
    "metadata": {},
    "outputs": [
     {
@@ -2464,6 +2536,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
+   "id": "d7947237",
    "metadata": {},
    "outputs": [
     {
@@ -2537,6 +2610,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
+   "id": "f8dfa0f0",
    "metadata": {},
    "outputs": [
     {
@@ -2569,6 +2643,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
+   "id": "66db2f08",
    "metadata": {},
    "outputs": [
     {
@@ -2598,6 +2673,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
+   "id": "2aa91fe5",
    "metadata": {},
    "outputs": [
     {
@@ -2719,6 +2795,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
+   "id": "f305834a",
    "metadata": {},
    "outputs": [
     {
@@ -2805,6 +2882,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5b39e191",
    "metadata": {},
    "source": [
     "#### Implement logic in `order.py`"
@@ -2813,6 +2891,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
+   "id": "52c8a75d",
    "metadata": {},
    "outputs": [
     {
@@ -2930,6 +3009,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a50859bf",
    "metadata": {},
    "source": [
     "## get_training_data()"
@@ -2937,6 +3017,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "edc9637d",
    "metadata": {},
    "source": [
     "### Implement get_training_data() in `orders.py`"
@@ -2945,6 +3026,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
+   "id": "575ac060",
    "metadata": {},
    "outputs": [
     {
@@ -3222,6 +3304,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "07458e5c",
    "metadata": {},
    "source": [
     "# END OF THIS NOTEBOOK"
@@ -3233,7 +3316,8 @@
    "hash": "b8a82e7080485e78fcfa83fef03810cd92165d97a6ff1e2c5804f0b7673e7209"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.6 64-bit ('olist-dash': pyenv)",
+   "display_name": "Python 3",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
