--- a/notebooks/03_simple_analysis.ipynb
+++ b/notebooks/03_simple_analysis.ipynb
@@ -833,7 +833,8 @@
    "hash": "b8a82e7080485e78fcfa83fef03810cd92165d97a6ff1e2c5804f0b7673e7209"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.6 64-bit ('olist-dash': pyenv)",
+   "display_name": "Python 3",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -847,9 +848,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.6"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
